--- a/rmf_fleet_adapter/package.xml
+++ b/rmf_fleet_adapter/package.xml
@@ -20,6 +20,7 @@
   <depend>rmf_fleet_msgs</depend>
   <depend>rmf_lift_msgs</depend>
   <depend>rmf_task_msgs</depend>
+  <depend>rmf_charger_msgs</depend>
   <depend>rmf_traffic</depend>
   <depend>rmf_traffic_ros2</depend>
   <depend>rmf_battery</depend>
